# graphical-nrsc5

./: CMakeLists.txt  LICENSE  README.md
src/: gtk.xml  gtk.xml~  main.cpp
src/classes/: Nrsc5Helper.cpp  Nrsc5Helper.h
